# H-Net-Experimento

./: .gitignore  README.md
docs/: architecture.md  h-net-implementation-plan.md
docs/decisions/: 0001-build-hnet-as-componentized-byte-hierarchy.md
flow/: Cargo.toml
flow/src/: corpus_byte_level.rs  exp_decoder.rs  main.rs
mamba-2/: Cargo.toml
mamba-2/src/: lib.rs  mamba2.rs  ssd.rs
mixture-of-experts/: Cargo.toml
mixture-of-experts/src/: expert.rs  lib.rs  moe.rs  router.rs
self-attention/: Cargo.toml
self-attention/src/: attention.rs  lib.rs  transformer.rs
